# ai-advent

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
ai_advent/: __main__.py  config.py
ai_advent/days/day01/: solution.py
ai_advent/days/day02/: solution.py
ai_advent/days/day03/: console_output.md  solution.py
ai_advent/days/day04/: console_output.md  solution.py
ai_advent/days/day05/: console_output.md  solution.py
